# mosaic_design_agent_seed

./: .gitignore  AGENTS.md  README.md  STATUS.md  pyproject.toml
config/: tool_registry.example.yaml
docs/: agent_loop_spec.md  architecture.md  data_contracts.md  design_brief.md  deterministic_tile_map_compiler.md  open_questions.md  physical_tessera_subdivision.md  testing_strategy.md  tomorrow_meeting_plan.md
examples/: meeting_intake_form.md  palette_db.example.json  project_brief.example.json  run_smoke_stub.expected.md
mosaic_agent/: __init__.py  critique.py  demo.py  edit_prompt_compiler.py  export.py  flow_field.py  ideation_stub.py  image_edit_service.py  intake.py  load.py  loop.py  models.py  openai_ideation.py  palette.py  palette_compiler.py  physical_scale.py  prompt_compiler.py  reference_images.py  region_map.py  session_models.py  tessera.py  tessera_export.py  tile_map_export.py  tile_map_models.py  visual.py
mosaic_workbench/: __init__.py  app.py  controllers.py  export.py  mask_utils.py  session_state.py
prompts/: codex_implementation_prompt.md  design_orchestrator_system_prompt.md  image_prompt_template.md
research/: sdk_and_design_agent_research.md
schemas/: concept_package.schema.json  palette_db.schema.json  project_brief.schema.json  run_trace.schema.json
tasks/: phase_0_repo_skeleton.md  phase_1_stub_loop.md  phase_2_real_agent_runtime.md  phase_3_image_providers.md  phase_4_tomorrow_demo.md
tests/: test_edit_prompt_compiler.py  test_flow_field.py  test_missing_questions.py  test_openai_edit_provider.py  test_palette_compiler.py  (+17 more)
(+21 files in other folders)
